@@ -1,3 +1,7 @@
+2015-02-19  Pedro Alves  <palves@redhat.com>
+
+	* floatformat.h [__cplusplus]: Wrap in extern "C".
+
 2015-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* dwarf2.h (enum dwarf_source_language): Add DW_LANG_Fortran03
